# rust-wasm-rpc-sdkgen

./: .gitignore  Cargo.toml  README.md  tmp.rs
examples/todo_list/: Cargo.toml  README.md
examples/todo_list/src/: lib.rs  main.rs  todo.rs
examples/todo_list/www/: index.html  index.js  package.json
examples/yew_example/: Cargo.toml  README.md
examples/yew_example/src/: lib.rs  main.rs  store.rs  todo.rs
examples/yew_example/src/components/: mod.rs  new_todo.rs  todo_list.rs
examples/yew_example/static/: .gitignore  package.json
fe/: Cargo.toml  LICENSE_MIT
fe/src/: entities.rs  lib.rs
remote_attr/: Cargo.toml
remote_attr/src/: backend.rs  frontend.rs  lib.rs  utils.rs
src/: example.rs  lib.rs  main.rs  todo.rs
src/entities/: todo.rs
