[package]
name = "ideal_http"
version = "0.1.0"
authors = ["Craig Wilkinson <curlywurlycraig@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
serde = { version = "1.0.63", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
remote_attr = { path = "./remote_attr" }