[package]
name = "remote_attr"
version = "0.1.0"
authors = ["Craig Wilkinson <curlywurlycraig@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.46", features = ["full"] }
quote = "1.0.7"
proc-macro2 = "0.4.30"