[package]
name = "yew_example"
version = "0.1.0"
authors = ["Craig Wilkinson <craig@crwi.uk>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
frontend = [
  "rust_wasm_rpcgen/frontend",
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "yew"
]
backend = ["rust_wasm_rpcgen/backend", "tokio", "warp", "lazy_static", "uuid"]

[profile.release]
opt-level = "s"

[dependencies]
rust_wasm_rpcgen = { path = "../../", optional = true }
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"

# Backend deps
tokio = { version = "0.2", features = ["full"], optional = true }
warp = { version = "0.2", optional = true }
lazy_static = { version = "1.4", optional = true }
uuid = { version = "0.4", features = ["v4"], optional = true }


# Frontend deps
wasm-bindgen = { version = "0.2.68", features = ["serde-serialize"], optional = true  }
wasm-bindgen-futures = { version = "0.4.18", optional = true }
yew = { version = "0.17", optional = true }
log = "0.4.6"
wasm-logger = "0.2.0"
